<resources>
    <string name="app_name">Substation Monitoring</string>

    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="login_error">Đăng nhập thất bại</string>
    <string name="login_uppercase">ĐĂNG NHẬP</string>
    <string name="register">Đăng ký</string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="register_error">Đăng ký thất bại</string>
    <string name="require_length">Tài khoản và mật khẩu phải nhiều hơn 6 kí tự</string>
    <string name="error_re_password">Nhập lại mật khẩu sai</string>
    <string name="not_enough">Vui lòng nhập đủ thông tin</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_monitoring">Quản lý nhiệt độ</string>

    <string name="chon_ngay">Chọn ngày</string>
    <string name="errorProcess">Có lỗi xảy ra trong quá trình xử lý. Vui lòng kiểm tra lại.</string>
    <string name="ok">Đồng ý</string>
    <string name="errorNetwork">Bạn vui lòng kiểm tra lại kết nối mạng</string>
    <string name="exception">Đã có lỗi không xác định xảy ra, vui lòng liên hệ với quản trị để được trợ giúp!</string>
    <string name="require_2g">Mạng của bạn hiện tại là 2G. Giao dịch có thể chậm</string>
    <string name="require_3g">Mạng của bạn hiện tại là 3G.</string>
    <string name="require_4g">Mạng của bạn hiện tại là 4G.</string>
    <string name="require_wifi">Mạng của bạn hiện tại là WIFI.</string>
    <string name="require_netwotk_unknown">Mạng của bạn không xác định.</string>
    <string name="checkgps">Không lấy được tọa độ ! Bạn vui lòng ra khỏi khu vực có mái che để lấy được tọa độ.</string>
    <string name="cannot_get_location">Không lấy được tọa độ, bạn vui lòng kiểm tra lại GPS .</string>
    <string name="confirmspport">Bạn có muốn gọi đến số %s để được hỗ trợ sử dụng phần mềm ?</string>
    <string name="cancel">Hủy</string>
    <string name="lowMemory">Bộ nhớ RAM còn lại %1$s MB, điều này có thể gây ra 1 số lỗi trong quá trình sử dụng. Ứng dụng chỉ hoạt động ổn định với thiết bị có bộ nhớ RAM lớn hơn %2$s MB</string>
    <string name="okMemory">Bộ nhớ RAM còn lại %1$s MB</string>
    <string name="unknown_host_exception">Xin lỗi, không kết nối được đến máy chủ, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="connect_timeout_exception">Xin lỗi, bạn chưa có kết nối đến hệ thống, vui lòng đảm bảo đã tắt wifi, sim được khai kết nối đầy đủ và đã cài đặt s-intranet!</string>
    <string name="socket_timeout_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="http_host_connect_exception">Quá trình phản hồi từ máy chủ bị gián đoạn! Vui lòng kiểm tra kết nối và đường truyền mạng!</string>
    <string name="socket_close_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="illegal_state_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="socket_io_exception">Quá trình phản hồi từ máy chủ quá lâu! Vui lòng kiểm tra kết nối và đường truyền mạng và thực hiện lại!</string>
    <string name="txt_transaction_timeout">Giao dịch đang được xử lý. Vui lòng kiểm tra lại kết quả sau 5 phút!</string>
    <string name="txt_todate_after_currentdate">Đến ngày không được lớn hơn ngày hiện tại!</string>
    <string name="checktimeupdatejob">Từ ngày phải nhỏ hơn hoặc bằng đến ngày</string>
    <string name="duration_over_load">Bạn chỉ được tìm kiếm trong khoảng thời gian %s ngày.</string>
    <string name="default_notification_channel_id">113</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="already_have_account">Bạn đã có tài khoản? <font color='#FF0000'>Đăng nhập</font></string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="email_or_username">Email hoặc tên tài khoản</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="save_user">Lưu tài khoản</string>
    <string name="manage_device">Quản lý thiết bị</string>
    <string name="manage_room">Quản lý phòng</string>
    <string name="room">Phòng</string>
    <string name="no_device">Không có thiết bị, vui lòng thêm thiết bị</string>
    <string name="turn_on_monitoring">Bật theo dõi nhiệt độ</string>
    <string name="turn_off_monitoring">Tắt theo dõi nhiệt độ</string>
    <string name="input_device_name">Vui lòng nhập tên thiết bị</string>
    <string name="delete">Xóa</string>
    <string name="device">Thiết bị</string>
    <string name="delete_device">Bạn có muốn xóa thiết bị ?</string>
    <string name="delete_all">Xóa tất cả</string>
    <string name="server_error">Đã xảy ra lỗi, vui lòng thử lại sau!</string>
    <string name="delete_room">Bạn có muốn xóa phòng ?</string>
    <string name="delete_device_success">Xóa thành công</string>
    <string name="delete_device_fail">Xóa thất bại, vui lòng thử lại</string>
    <string name="change_device_name">Đổi tên thiết bị</string>
    <string name="profile">Thông tin tài khoản</string>
    <string name="close">Đóng</string>
    <string name="add_note">Ghi chú</string>
    <string name="log_out">Đăng xuất ?</string>
    <string name="configure_threshold_success">Cài ngưỡng thành công</string>
    <string name="configure_threshold_fail">Cài ngưỡng thất bại</string>
    <string name="empty_threshold">Vui lòng nhập ngưỡng!</string>
    <string name="add_room">Thêm phòng</string>
    <string name="add_home">Thêm nhà</string>
    <string name="light_timer_on"><u>Hẹn giờ bật</u></string>
    <string name="light_timer_off"><u>Hẹn giờ tắt</u></string>
    <string name="light_on_in"><u>Bật trong</u></string>
    <string name="timer"><u>Hẹn giờ</u></string>
    <string name="count_down"><u>Count down</u></string>
    <string name="home">Nhà</string>
    <string name="name">Tên</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="add_device">Thêm thiết bị</string>
    <string name="connected">Đã kết nối đến Server</string>
    <string name="disconnected">Đang kết nối…</string>
</resources>
