<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.khanhlh.substationmonitor.ui.login.LoginActivityViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:afterTextChanged="@{(editable)->viewModel.afterMailChange(editable)}"
                    android:background="@drawable/login_et_background"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/themeColor1">

                </androidx.appcompat.widget.AppCompatEditText>

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="12dp"
                    android:afterTextChanged="@{(editable)->viewModel.afterPasswordChange(editable)}"
                    android:background="@drawable/login_et_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/themeColor1">

                </androidx.appcompat.widget.AppCompatEditText>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton

                        android:id="@+id/btLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_bt_background"
                        android:onClick="@{viewModel.loginClickListener}"
                        android:text="@string/login_uppercase"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:fontFamily="@font/advent_pro_light"
                        android:onClick="@{viewModel.registerClickListener}"
                        android:text="@string/register"
                        app:layout_constraintBottom_toBottomOf="@+id/btLogin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/btLogin"
                        app:layout_constraintVertical_bias="0.448" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="132dp"
            android:layout_height="178dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cornerdesign" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:fontFamily="@font/advent_pro_light"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/themeColor1"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView

            android:layout_width="132dp"
            android:layout_height="178dp"
            android:layout_weight="1"
            android:scaleType="fitXY"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/cornerdesignbottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

